--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud", src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud", src="cloud.png" alt="cloud-img">
       <h1>I'm Sachi</h1>
       <p><h2>a <span class="pro">pro</span>grammer.</h2></p>
-      <img class="bottom-cloud", src="images/cloud.png" alt="cloud-img">
-      <img class="mountain" src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud", src="cloud.png" alt="cloud-img">
+      <img class="mountain" src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="images/sachi.png" alt="profile-img">
+        <img src="sachi.png" alt="profile-img">
         <h2>Hello there!</h2>
         <p class="intro">I'm post graduated with specialization in Mathematics from Delhi University.(My all education details: <a href="education.html" target="_blank">Click here) </a> I'm always eager to learn  new skills to develop my technical knowledge.</p>
       </div>
@@ -28,18 +28,18 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="programming-lang" src="images/ux.png" alt="tech-skills-img">
+          <img class="programming-lang" src="ux.png" alt="tech-skills-img">
           <h3>Python Programming Language</h3>
           <p>I've a good knowledge of Python including some of its most popular libraries such as Numpy, Pandas, Matplotlib. I also have a knowledge of creating API and GUI using Python.</p>
 
         </div>
         <div class="skill-row">
-          <img class="frontend" src="images/programming.png" alt="front-end-img">
+          <img class="frontend" src="programming.png" alt="front-end-img">
           <h3>Front-End(HTML, CSS and Javascript)</h3>
           <p>I have created this website using my web languages skill such as HTML, CSS, and JavaScript that allow users to access and interact with the site or app.</p>
         </div>
         <div class="skill-row">
-          <img class="database" src="images/database.png" alt="database-img">
+          <img class="database" src="database.png" alt="database-img">
           <h3>Database: MySql</h3>
           <p>I am having a good knowledge to write a querry in MySql and understanding of database principles, structures, theories and practices.</p>
         </div>
