--- a/education.html
+++ b/education.html
@@ -6,7 +6,7 @@
     </head>
     <body
     <div class="siksha">
-        <img class="technical" src="images/education.png" alt="degree-img">
+        <img class="technical" src="education.png" alt="degree-img">
         <h3>Post Graduation |<a class="institute" href="http://www.du.ac.in/"> Delhi University</a>, 2022</h3>
         <p>M.sc(Mathematics)<br>8.77cgpa</p><br>
         <h3>Under Graduation | <a class="institute" href="http://www.du.ac.in/"> Delhi University</a>, 2020</h3>
