--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Education</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="styles.css">
 
     </head>
     <body
